--- a/Question-1-keyboard-accessibility.html
+++ b/Question-1-keyboard-accessibility.html
@@ -260,7 +260,7 @@ article p {
         </article>
       </div>
     </div>
-    <div class="three-col">
+    <div class="three-col h3">
       <div class="tier-header">
         <h3>Recommended</h3>
       </div>
