--- a/Question-1-keyboard-accessibility.html
+++ b/Question-1-keyboard-accessibility.html
@@ -260,9 +260,9 @@ article p {
         </article>
       </div>
     </div>
-    <div class="three-col h3">
+    <div class="three-col">
       <div class="tier-header">
-        <h3>Recommended</h3>
+        <h2>Recommended</h2>
       </div>
       <div class="columns">
         <article>
