--- a/Question-1-keyboard-accessibility.html
+++ b/Question-1-keyboard-accessibility.html
@@ -260,11 +260,10 @@ article p {
         </article>
       </div>
     </div>
-    <div class="side-by-side">
+    div class="three-col">
       <div class="tier-header">
-        <div class="tier-header">
-          <h2 tabindex="0">Recommended</h2>
-        </div
+        <h2>Recommended</h2>
+      </div>
       <div class="columns">
         <article>
           <img src="https://github.com/udacity/ud891/blob/gh-pages/lesson2-focus/02-dom-order/images/dog.jpg?raw=true" alt="A dog at a desk looks up at a laptop and mouse" />
