updated tab index

--- a/Question-1-keyboard-accessibility.html
+++ b/Question-1-keyboard-accessibility.html
@@ -204,11 +204,11 @@ article p {
       
       <!-- Maybe this could be improved with aria-activedescendant later? -->
       <nav class="menu">
-        <a href="#">Home</a>
-        <a href="#">Politics</a>
-        <a href="#" tabindex="-1">Business</a>
-        <a href="#">Entertainment</a>
-        <a href="#">Sports</a>
+        <a href="#" tabindex="0">Home</a>
+        <a href="#" tabindex="0">Politics</a>
+        <a href="#" tabindex="0">Business</a>
+        <a href="#" tabindex="0">Entertainment</a>
+        <a href="#" tabindex="0">Sports</a>
         <a href="#" class="btn-search pull-right"><img src="https://raw.githubusercontent.com/udacity/ud891/2de2a0688c68809a3b453db3a24b1a59e8401459/lesson2-focus/02-dom-order/images/search.svg" alt="Search" />Search</a> 
 
       </nav>
@@ -262,7 +262,7 @@ article p {
     </div>
     div class="three-col">
       <div class="tier-header">
-        <h2>Recommended</h2>
+        <h2 tabindex="0">Recommended</h2>
       </div>
       <div class="columns">
         <article>
